# adaptive-fde-case-simulator

./: .env.example  .gitignore  AGENTS.md  DECISIONS.md  Dockerfile  PYTHON_API_DESIGN.md  PYTHON_DEVELOPMENT.md  README.md  ROADMAP.md  SPEC.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml
apps/api/: alembic.ini
apps/api/alembic/: env.py
apps/api/alembic/versions/: c9181b6231b2_initial_case_session_event_tables.py
apps/api/src/afcs_api/: __init__.py  app.py  cli.py  db.py  models.py  schemas.py
apps/web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/web/src/: App.tsx  index.css  types.ts
apps/web/src/__tests__/: App.test.tsx
apps/web/src/api/: client.ts
cases/unmaintainable-prototype/: v1.yaml
cases/unsafe-autonomy/: v1.yaml
cases/wrong-use-case/: v1.yaml  v2.yaml
docs/architecture/: ARCHITECTURE.md
docs/security/: THREAT_MODEL.md
docs/site/: package-lock.json  package.json  svelte.config.js  vite.config.js
scripts/: baseline_agent.py
tests/adversarial/: __init__.py  conftest.py  test_cross_session.py  test_event_tampering.py  test_prompt_injection.py  test_state_extraction.py
tests/case-validation/: test_case_fixture.py  test_cli_validate.py  test_loader.py  test_reachability.py  test_schema_validation.py  test_seed_cases.py  valid_case_fixture.yaml
tests/integration/: conftest.py  test_action_api.py  test_agent_api.py  test_artifact_api.py  test_evaluation_api.py  test_event_api.py  test_session_api.py  test_stakeholder_api.py
tests/unit/: conftest.py  test_action_handlers.py  test_events.py  test_hard_constraints.py  test_language_renderer.py  test_model_gateway.py  test_policy_engine.py  test_preconditions.py  test_replay.py  test_report.py  test_scoring.py  test_session.py  test_state.py  test_state_transition.py  test_validators.py
(+29 files in other folders)
